# ndcontainer

./: CMakeLists.txt  LICENSE  LICENSE.txt  README.md
cmake/: ndcontainerConfig.cmake.in
examples/: example.cpp
nd/: array.h  grid.h  vector.h
tests/: common.h  main.cpp
tests/array/: test_array_assignment.cpp  test_array_at.cpp  test_array_back.cpp  test_array_cast.cpp  test_array_ctor.cpp  test_array_data.cpp  test_array_empty.cpp  test_array_factory_constant.cpp  test_array_factory_one.cpp  test_array_factory_zero.cpp  test_array_fill.cpp  test_array_front.cpp  test_array_grid_to_list_id.cpp  test_array_is_valid_ids.cpp  test_array_iterator.cpp  test_array_iterator_arithmetic_operators.cpp  test_array_iterator_comparison.cpp  test_array_list_to_grid_id.cpp  test_array_multi_index_operator.cpp  test_array_num_dimensions.cpp  test_array_operator_stream.cpp  test_array_operators_compare.cpp  test_array_reverse_iterator_arithmetic_operators.cpp  test_array_set_values.cpp  test_array_single_index_operator.cpp  test_array_size.cpp  test_array_stride.cpp  test_array_swap.cpp  test_array_swap_external.cpp  test_array_to_string.cpp
tests/grid/: test_grid_assignment.cpp  test_grid_at.cpp  test_grid_back.cpp  test_grid_cast.cpp  test_grid_clear.cpp  test_grid_ctor.cpp  test_grid_data.cpp  test_grid_empty.cpp  test_grid_fill.cpp  test_grid_front.cpp  test_grid_grid_to_list_id.cpp  test_grid_is_valid_ids.cpp  test_grid_iterator.cpp  test_grid_iterator_arithmetic_operators.cpp  test_grid_iterator_comparison.cpp  test_grid_list_to_grid_id.cpp  test_grid_multi_index_operator.cpp  test_grid_num_dimensions.cpp  test_grid_operator_assignment.cpp  test_grid_operator_stream.cpp  test_grid_operators_compare.cpp  test_grid_reverse_iterator_arithmetic_operators.cpp  test_grid_set_values.cpp  test_grid_single_index_operator.cpp  test_grid_size.cpp  test_grid_stride.cpp  test_grid_swap.cpp  test_grid_swap_external.cpp  test_grid_to_string.cpp
tests/vector/: test_vector_assignment.cpp  test_vector_at.cpp  test_vector_back.cpp  test_vector_cast.cpp  test_vector_clear.cpp  test_vector_ctor.cpp  test_vector_data.cpp  test_vector_empty.cpp  test_vector_fill.cpp  test_vector_front.cpp  test_vector_grid_to_list_id.cpp  test_vector_is_valid_ids.cpp  test_vector_iterator.cpp  test_vector_iterator_arithmetic_operators.cpp  test_vector_iterator_comparison.cpp  test_vector_list_to_grid_id.cpp  test_vector_multi_index_operator.cpp  test_vector_num_dimensions.cpp  test_vector_operator_assignment.cpp  test_vector_operator_stream.cpp  test_vector_operators_compare.cpp  test_vector_reverse_iterator_arithmetic_operators.cpp  test_vector_set_values.cpp  test_vector_single_index_operator.cpp  test_vector_size.cpp  test_vector_stride.cpp  test_vector_swap.cpp  test_vector_swap_external.cpp  test_vector_to_string.cpp
